--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=${DB_USER}
-quarkus.datasource.password=${DB_PASSWORD}
-quarkus.datasource.jdbc.url=${DB_URL}
-quarkus.hibernate-orm.database.generation=none
-quarkus.http.port=8080
+quarkus.datasource.username=e20220010729
+quarkus.datasource.password=00000000
+quarkus.datasource.jdbc.url=jdbc:postgresql://bdd.etu.umontpellier.fr/e20220010729
