--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=e20220010729
-quarkus.datasource.password=00000000
-quarkus.datasource.jdbc.url=jdbc:postgresql://bdd.etu.umontpellier.fr/e20220010729
+#quarkus.datasource.db-kind=postgresql
+#quarkus.datasource.username=e20220010729
+#quarkus.datasource.password=00000000
+#quarkus.datasource.jdbc.url=jdbc:postgresql://bdd.etu.umontpellier.fr/e20220010729
+
+
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=root
+quarkus.datasource.password=
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/agenceinterim
+
+quarkus.http.port=8080
+
+quarkus.hibernate-orm.database.generation=update
+
