ajouter les communications entre api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ quarkus.datasource.username=root
 quarkus.datasource.password=
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/agenceinterim
 
-quarkus.http.port=8080
+quarkus.http.port=8089
+
+org.acme.service.UserService/mp-rest/url=http://localhost:8080/api
+org.acme.service.OffreService/mp-rest/url=http://localhost:8082/api
 
 quarkus.hibernate-orm.database.generation=update
 
