--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,27 @@
-#quarkus.datasource.db-kind=postgresql
-#quarkus.datasource.username=e20220010729
-#quarkus.datasource.password=00000000
-#quarkus.datasource.jdbc.url=jdbc:postgresql://bdd.etu.umontpellier.fr/e20220010729
-
-
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/agenceinterim
 
-quarkus.http.port=8089
+quarkus.http.port=8088
+
 
 org.acme.service.UserService/mp-rest/url=http://localhost:8080/api
 org.acme.service.OffreService/mp-rest/url=http://localhost:8082/api
 
-quarkus.hibernate-orm.database.generation=update
 
+mp.jwt.verify.issuer=AuthentificationJwtService
+smallrye.jwt.sign.key.location=privatekey.pem
+mp.jwt.verify.publickey.location=rsaPublicKey.pem
+
+
+#quarkus.hibernate-orm.database.generation=update
+
+#quarkus.smallrye-jwt.enabled=true
+#quarkus.smallrye-jwt.realm-name=myrealm
+#quarkus.smallrye-jwt.public-key-location=publickey.pem
+
+#smallrye.jwt.sign.key-location=privateKey.pem
+
+# The issuer of the token
+#smallrye.jwt.issuer=https://example.com/auth/realms/quarkus
