--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,21 @@ quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/agenceinterim
 quarkus.http.port=8088
 
 
-org.acme.service.UserService/mp-rest/url=http://localhost:8080/api
+org.acme.service.UserService/mp-rest/url=http://localhost:8081/api
 org.acme.service.OffreService/mp-rest/url=http://localhost:8082/api
 
 
 mp.jwt.verify.issuer=AuthentificationJwtService
 smallrye.jwt.sign.key.location=privatekey.pem
 mp.jwt.verify.publickey.location=rsaPublicKey.pem
+
+
+# Keycloak
+
+#quarkus.oidc.auth-server-url=http://localhost:8088/auth/realms/quarkus-realm
+#quarkus.oidc.client-id=quarkus-app
+#quarkus.oidc.credentials.secret=secret
+
 
 
 #quarkus.hibernate-orm.database.generation=update
